vendor/bifrost/tls/bindings/x509.odin


	// X509_get0_authority_key_id returns keyIdentifier of |x509|'s authority key
	// identifier, if the extension and field are present. (See RFC 5280,
	// section 4.2.1.1.) It returns NULL if the extension is not present, if it is
	// present but lacks a keyIdentifier field, or if some extension in |x509| was
	// invalid.
	//
	// TODO(crbug.com/boringssl/381): Decoding an |X509| object will not check for
	// invalid extensions. To detect the error case, call
	// |X509_get_extension_flags| and check the |EXFLAG_INVALID| bit.
	X509_get0_authority_key_id :: proc(x509: ^X509) -> ^ASN1_OCTET_STRING ---
}

sk_GENERAL_NAME_cmp_func       :: proc "c" (^^GENERAL_NAME, ^^GENERAL_NAME) -> i32
sk_GENERAL_NAME_copy_func      :: proc "c" (^GENERAL_NAME) -> ^GENERAL_NAME
sk_GENERAL_NAME_delete_if_func :: proc "c" (^GENERAL_NAME, rawptr) -> i32
stack_st_GENERAL_NAME          :: struct {}
sk_GENERAL_NAME_free_func      :: proc "c" (^GENERAL_NAME)
GENERAL_NAMES                  :: stack_st_GENERAL_NAME

@(default_calling_convention="c")
foreign lib {
	// X509_get0_authority_issuer returns the authorityCertIssuer of |x509|'s
	// authority key identifier, if the extension and field are present. (See
	// RFC 5280, section 4.2.1.1.) It returns NULL if the extension is not present,
	// if it is present but lacks a authorityCertIssuer field, or if some extension
	// in |x509| was invalid.
	//
	// TODO(crbug.com/boringssl/381): Decoding an |X509| object will not check for
	// invalid extensions. To detect the error case, call
	// |X509_get_extension_flags| and check the |EXFLAG_INVALID| bit.
	X509_get0_authority_issuer :: proc(x509: ^X509) -> ^GENERAL_NAMES ---

	// X509_get0_authority_serial returns the authorityCertSerialNumber of |x509|'s
	// authority key identifier, if the extension and field are present. (See
	// RFC 5280, section 4.2.1.1.) It returns NULL if the extension is not present,
	// if it is present but lacks a authorityCertSerialNumber field, or if some
	// extension in |x509| was invalid.
	//
	// TODO(crbug.com/boringssl/381): Decoding an |X509| object will not check for
	// invalid extensions. To detect the error case, call
	// |X509_get_extension_flags| and check the |EXFLAG_INVALID| bit.
	X509_get0_authority_serial :: proc(x509: ^X509) -> ^ASN1_INTEGER ---

	// X509_get0_extensions returns |x509|'s extension list, or NULL if |x509| omits
	// it.
	X509_get0_extensions :: proc(x509: ^X509) -> ^stack_st_X509_EXTENSION ---
}

stack_st_X509_EXTENSION :: struct {}

@(default_calling_convention="c")
foreign lib {
	// X509_get_ext_count returns the number of extensions in |x|.
	X509_get_ext_count :: proc(x: ^X509) -> i32 ---

	// X509_get_ext_by_NID behaves like |X509v3_get_ext_by_NID| but searches for
	// extensions in |x|.
	X509_get_ext_by_NID :: proc(x: ^X509, nid: i32, lastpos: i32) -> i32 ---

	// X509_get_ext_by_OBJ behaves like |X509v3_get_ext_by_OBJ| but searches for
	// extensions in |x|.
	X509_get_ext_by_OBJ :: proc(x: ^X509, obj: ^ASN1_OBJECT, lastpos: i32) -> i32 ---

	// X509_get_ext_by_critical behaves like |X509v3_get_ext_by_critical| but
	// searches for extensions in |x|.
	X509_get_ext_by_critical :: proc(x: ^X509, crit: i32, lastpos: i32) -> i32 ---

	// X509_get_ext returns the extension in |x| at index |loc|, or NULL if |loc| is
	// out of bounds. This function returns a non-const pointer for OpenSSL
	// compatibility, but callers should not mutate the result.
	X509_get_ext :: proc(x: ^X509, loc: i32) -> ^X509_EXTENSION ---

	// X509_get_ext_d2i behaves like |X509V3_get_d2i| but looks for the extension in
	// |x509|'s extension list.
	//
	// WARNING: This function is difficult to use correctly. See the documentation
	// for |X509V3_get_d2i| for details.
	X509_get_ext_d2i :: proc(x509: ^X509, nid: i32, out_critical: ^i32, out_idx: ^i32) -> rawptr ---

	// X509_get0_tbs_sigalg returns the signature algorithm in |x509|'s
	// TBSCertificate. For the outer signature algorithm, see |X509_get0_signature|.
	//
	// Certificates with mismatched signature algorithms will successfully parse,
	// but they will be rejected when verifying.
	X509_get0_tbs_sigalg :: proc(x509: ^X509) -> ^X509_ALGOR ---

	// X509_get0_signature sets |*out_sig| and |*out_alg| to the signature and
	// signature algorithm of |x509|, respectively. Either output pointer may be
	// NULL to ignore the value.
	//
	// This function outputs the outer signature algorithm. For the one in the
	// TBSCertificate, see |X509_get0_tbs_sigalg|. Certificates with mismatched
	// signature algorithms will successfully parse, but they will be rejected when
	// verifying.
	X509_get0_signature :: proc(out_sig: ^^ASN1_BIT_STRING, out_alg: ^^X509_ALGOR, x509: ^X509) ---

	// X509_get_signature_nid returns the NID corresponding to |x509|'s signature
	// algorithm, or |NID_undef| if the signature algorithm does not correspond to
	// a known NID.
	X509_get_signature_nid :: proc(x509: ^X509) -> i32 ---

	// i2d_X509_tbs serializes the TBSCertificate portion of |x509|, as described in
	// |i2d_SAMPLE|.
	//
	// This function preserves the original encoding of the TBSCertificate and may
	// not reflect modifications made to |x509|. It may be used to manually verify
	// the signature of an existing certificate. To generate certificates, use
	// |i2d_re_X509_tbs| instead.
	i2d_X509_tbs :: proc(x509: ^X509, outp: ^^u8) -> i32 ---

	// X509_verify checks that |x509| has a valid signature by |pkey|. It returns
	// one if the signature is valid and zero otherwise. Note this function only
	// checks the signature itself and does not perform a full certificate
	// validation.
	X509_verify :: proc(x509: ^X509, pkey: ^EVP_PKEY) -> i32 ---

	// X509_get1_email returns a newly-allocated list of NUL-terminated strings
	// containing all email addresses in |x509|'s subject and all rfc822name names
	// in |x509|'s subject alternative names. Email addresses which contain embedded
	// NUL bytes are skipped.
	//
	// On error, or if there are no such email addresses, it returns NULL. When
	// done, the caller must release the result with |X509_email_free|.
	X509_get1_email :: proc(x509: ^X509) -> ^stack_st_OPENSSL_STRING ---

	// X509_get1_ocsp returns a newly-allocated list of NUL-terminated strings
	// containing all OCSP URIs in |x509|. That is, it collects all URI
	// AccessDescriptions with an accessMethod of id-ad-ocsp in |x509|'s authority
	// information access extension. URIs which contain embedded NUL bytes are
	// skipped.
	//
	// On error, or if there are no such URIs, it returns NULL. When done, the
	// caller must release the result with |X509_email_free|.
	X509_get1_ocsp :: proc(x509: ^X509) -> ^stack_st_OPENSSL_STRING ---

	// X509_email_free releases memory associated with |sk|, including |sk| itself.
	// Each |OPENSSL_STRING| in |sk| must be a NUL-terminated string allocated with
	// |OPENSSL_malloc|. If |sk| is NULL, no action is taken.
	X509_email_free :: proc(sk: ^stack_st_OPENSSL_STRING) ---

	// X509_cmp compares |a| and |b| and returns zero if they are equal, a negative
	// number if |b| sorts after |a| and a negative number if |a| sorts after |b|.
	// The sort order implemented by this function is arbitrary and does not
	// reflect properties of the certificate such as expiry. Applications should not
	// rely on the order itself.
	//
	// TODO(https://crbug.com/boringssl/355): This function works by comparing a
	// cached hash of the encoded certificate. If |a| or |b| could not be
	// serialized, the current behavior is to compare all unencodable certificates
	// as equal. This function should only be used with |X509| objects that were
	// parsed from bytes and never mutated.
	X509_cmp :: proc(a: ^X509, b: ^X509) -> i32 ---

	// X509_new returns a newly-allocated, empty |X509| object, or NULL on error.
	// This produces an incomplete certificate which may be filled in to issue a new
	// certificate.
	X509_new :: proc() -> ^X509 ---

	// X509_set_version sets |x509|'s version to |version|, which should be one of
	// the |X509V_VERSION_*| constants. It returns one on success and zero on error.
	//
	// If unsure, use |X509_VERSION_3|.
	X509_set_version :: proc(x509: ^X509, version: c.long) -> i32 ---

	// X509_set_serialNumber sets |x509|'s serial number to |serial|. It returns one
	// on success and zero on error.
	X509_set_serialNumber :: proc(x509: ^X509, serial: ^ASN1_INTEGER) -> i32 ---

	// X509_set1_notBefore sets |x509|'s notBefore time to |tm|. It returns one on
	// success and zero on error.
	X509_set1_notBefore :: proc(x509: ^X509, tm: ^ASN1_TIME) -> i32 ---

	// X509_set1_notAfter sets |x509|'s notAfter time to |tm|. it returns one on
	// success and zero on error.
	X509_set1_notAfter :: proc(x509: ^X509, tm: ^ASN1_TIME) -> i32 ---

	// X509_getm_notBefore returns a mutable pointer to |x509|'s notBefore time.
	X509_getm_notBefore :: proc(x509: ^X509) -> ^ASN1_TIME ---

	// X509_getm_notAfter returns a mutable pointer to |x509|'s notAfter time.
	X509_getm_notAfter :: proc(x: ^X509) -> ^ASN1_TIME ---

	// X509_set_issuer_name sets |x509|'s issuer to a copy of |name|. It returns one
	// on success and zero on error.
	X509_set_issuer_name :: proc(x509: ^X509, name: ^X509_NAME) -> i32 ---

	// X509_set_subject_name sets |x509|'s subject to a copy of |name|. It returns
	// one on success and zero on error.
	X509_set_subject_name :: proc(x509: ^X509, name: ^X509_NAME) -> i32 ---

	// X509_set_pubkey sets |x509|'s public key to |pkey|. It returns one on success
	// and zero on error. This function does not take ownership of |pkey| and
	// internally copies and updates reference counts as needed.
	X509_set_pubkey :: proc(x509: ^X509, pkey: ^EVP_PKEY) -> i32 ---

	// X509_delete_ext removes the extension in |x| at index |loc| and returns the
	// removed extension, or NULL if |loc| was out of bounds. If non-NULL, the
	// caller must release the result with |X509_EXTENSION_free|.
	X509_delete_ext :: proc(x: ^X509, loc: i32) -> ^X509_EXTENSION ---

	// X509_add_ext adds a copy of |ex| to |x|. It returns one on success and zero
	// on failure. The caller retains ownership of |ex| and can release it
	// independently of |x|.
	//
	// The new extension is inserted at index |loc|, shifting extensions to the
	// right. If |loc| is -1 or out of bounds, the new extension is appended to the
	// list.
	X509_add_ext :: proc(x: ^X509, ex: ^X509_EXTENSION, loc: i32) -> i32 ---

	// X509_add1_ext_i2d behaves like |X509V3_add1_i2d| but adds the extension to
	// |x|'s extension list.
	//
	// WARNING: This function may return zero or -1 on error. The caller must also
	// ensure |value|'s type matches |nid|. See the documentation for
	// |X509V3_add1_i2d| for details.
	X509_add1_ext_i2d :: proc(x: ^X509, nid: i32, value: rawptr, crit: i32, flags: c.ulong) -> i32 ---

	// X509_sign signs |x509| with |pkey| and replaces the signature algorithm and
	// signature fields. It returns the length of the signature on success and zero
	// on error. This function uses digest algorithm |md|, or |pkey|'s default if
	// NULL. Other signing parameters use |pkey|'s defaults. To customize them, use
	// |X509_sign_ctx|.
	X509_sign :: proc(x509: ^X509, pkey: ^EVP_PKEY, md: ^EVP_MD) -> i32 ---

	// X509_sign_ctx signs |x509| with |ctx| and replaces the signature algorithm
	// and signature fields. It returns the length of the signature on success and
	// zero on error. The signature algorithm and parameters come from |ctx|, which
	// must have been initialized with |EVP_DigestSignInit|. The caller should
	// configure the corresponding |EVP_PKEY_CTX| before calling this function.
	//
	// On success or failure, this function mutates |ctx| and resets it to the empty
	// state. Caller should not rely on its contents after the function returns.
	X509_sign_ctx :: proc(x509: ^X509, ctx: ^EVP_MD_CTX) -> i32 ---
